feat: changed artifact id in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.nesterrovv</groupId>
-    <artifactId>vpn.vpnaccount</artifactId>
+    <artifactId>vpnaccount</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>vpnaccount</name>
